Update many files
This commit includes some rearranging of contents of files. Sometimes, I did this to address a specific warning. Other times, I rearranged to make things a bit more readable or to be consistent with the Iteration Template layout. There are some things in this commit that relate to getting rid of flex-layout.

--- a/client/src/app/users/user-profile.component.html
+++ b/client/src/app/users/user-profile.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row">
-  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+<div class="flex-row">
+  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
     <app-user-card [user]="this.user"></app-user-card>
   </div>
 </div>
