--- a/client/src/app/users/user-list.component.html
+++ b/client/src/app/users/user-list.component.html
@@ -1,34 +1,34 @@
-<div fxLayout="row">
-  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+<div class="flex-row">
+  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
 
-    <mat-card class="search-card">
+    <mat-card appearance="outlined" class="search-card">
       <mat-card-title class="user-list-title">Users</mat-card-title>
-      <mat-card-content fxLayout="column" >
+      <mat-card-content class="flex-col" >
 
-        <div fxLayout="row wrap" fxLayoutGap="10px">
+        <div class="flex-row gap-10 flex-wrap">
           <!-- Examples of filtering in Angular -->
 
           <mat-form-field class="input-field">
             <mat-label>Name</mat-label>
-            <input matInput id="user-name-input" placeholder="Filter by name"
+            <input matInput data-test="userNameInput" placeholder="Filter by name"
             [(ngModel)]="userName" (input)="updateFilter()">
             <mat-hint>Filtered on client</mat-hint>
           </mat-form-field>
 
           <mat-form-field class="input-field">
             <mat-label>Company</mat-label>
-            <input matInput id="user-company-input" placeholder="Filter by company"
+            <input matInput data-test="userCompanyInput" placeholder="Filter by company"
             [(ngModel)]="userCompany" (input)="updateFilter()">
             <mat-hint>Filtered on client</mat-hint>
           </mat-form-field>
         </div>
 
-        <div fxLayout="row wrap" fxLayoutGap="10px">
+        <div class="flex-row gap-10 flex-wrap">
           <!-- Examples of filtering on the server -->
 
           <mat-form-field class="input-field">
             <mat-label>Age</mat-label>
-            <input matInput id="user-age-input" type="number" placeholder="Filter by age"
+            <input matInput data-test="userAgeInput" type="number" placeholder="Filter by age"
             min="0" max="200" [(ngModel)]="userAge" (input)="getUsersFromServer()">
             <mat-hint>Filtered on server</mat-hint>
           </mat-form-field>
@@ -46,7 +46,7 @@
         </div>
 
         <br>
-        <div fxLayout="row wrap" fxLayoutGap="10px">
+        <div class="flex-row gap-10 flex-wrap">
           <label>View type: </label>
           <mat-radio-group aria-label="View type" [(ngModel)]="viewType" data-test="viewTypeRadio">
             <mat-radio-button value="card">Card</mat-radio-button>
@@ -59,25 +59,25 @@
   </div>
 </div>
 
-<div fxLayout="row">
-  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredUsers; else usersError" >
+<div class="flex-row">
+  <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredUsers; else usersError" >
     <!-- Switch between card and list view based on the viewType variable, set above in the mar-radio-group -->
     <div [ngSwitch]="viewType">
 
       <!-- Card grid view -->
-      <div *ngSwitchCase="'card'" fxLayout="row wrap" fxLayoutGap="10px" class="user-cards-container">
+      <div *ngSwitchCase="'card'" class="user-cards-container flex-row gap-10 flex-wrap">
         <app-user-card [simple]="true" *ngFor="let user of filteredUsers" class="user-card" [user]="user" fxFlex="1 1 280px"></app-user-card>
       </div>
 
       <!-- List view -->
-      <mat-card *ngSwitchCase="'list'">
+      <mat-card appearance="outlined" *ngSwitchCase="'list'">
         <mat-card-content>
           <mat-nav-list class="user-nav-list">
             <h3 mat-subheader>Users</h3>
             <a mat-list-item *ngFor="let user of this.filteredUsers" [routerLink]="['/users', user._id]" class="user-list-item">
-              <img matListAvatar [src]="user.avatar" alt="Avatar for {{user.name}}">
-              <h3 matLine class="user-list-name"> {{user.name}} </h3>
-              <p matLine class="user-list-role"> {{user.role}} </p>
+              <img matListItemAvatar [src]="user.avatar" *ngIf="this.user.avatar">
+              <span matListItemTitle mat-line class="user-list-name"> {{user.name}} </span>
+              <span matListItemLine class="user-list-role"> {{user.role}} </span>
             </a>
           </mat-nav-list>
         </mat-card-content>
@@ -88,7 +88,7 @@
 
   <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
   <ng-template #usersError>
-    <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="user-error">
+    <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="user-error">
       <mat-error>
         There was a problem loading the users. Possibly the server is down or perhaps there are network
         issues.
@@ -100,4 +100,3 @@
   </ng-template>
 
 </div>
-
