--- a/client/src/app/users/user-card.component.html
+++ b/client/src/app/users/user-card.component.html
@@ -1,6 +1,6 @@
 <mat-card appearance="outlined" class="user-card" *ngIf="this.user">
   <mat-card-header>
-    <img mat-card-avatar [src]="this.user.avatar" class="user-avatar" *ngIf="this.user.avatar">
+    <img mat-card-avatar [src]="this.user.avatar" alt="Avatar for {{this.user.name}}" class="user-avatar" *ngIf="this.user.avatar">
     <mat-card-title class="user-card-name">{{ this.user.name }}</mat-card-title>
     <mat-card-subtitle class="user-card-company">{{ this.user.company }}</mat-card-subtitle>
   </mat-card-header>
