Bring across `Observable` handling changes from iteration template
This improves our handling of `Observable`s in a variety of ways, mostly copying from https://github.com/UMM-CSci-3601/3601-lab4-mongo/pull/68

--- a/client/src/app/users/user-profile.component.html
+++ b/client/src/app/users/user-profile.component.html
@@ -1,5 +1,9 @@
 <div class="flex-row">
   <div class="flex-1" fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
-    <app-user-card [user]="this.user"></app-user-card>
+    @if (this.user) {
+      <app-user-card [user]="this.user"></app-user-card>
+    } @else {
+      <p>Loading user profile data...</p>
+    }
   </div>
 </div>
