--- a/client/src/app/users/user-list.component.html
+++ b/client/src/app/users/user-list.component.html
@@ -102,6 +102,9 @@
           issues.
         </mat-error>
         <mat-error>
+          Error message: {{ this.errMsg }}
+        </mat-error>
+        <mat-error>
           Please wait a bit and try again or start the server.
         </mat-error>
       </div>
